flicker bug resolved

--- a/css/flipboard.css
+++ b/css/flipboard.css
@@ -121,7 +121,6 @@ div {
 	border-bottom-left-radius: 20px;
 	border-bottom-right-radius: 20px;
 	/*padding: 5% 0;*/
-	display: none;
 }
 
 .upper-lower-container{
